e2e-tests/tests/snapshots/save_config__every_discovered_source_and_resource_is_spelled_out.snap
---
source: e2e-tests/tests/save_config.rs
expression: saved
---
listen_addresses: 127.0.0.1:0
tilejson_url_version_param: version
pmtiles:
  paths:
  - tests/fixtures/pmtiles
  sources:
    png: tests/fixtures/pmtiles/png.pmtiles
    stamen_toner__raster_CC-BY-ODbL_z3: tests/fixtures/pmtiles/stamen_toner__raster_CC-BY+ODbL_z3.pmtiles
mbtiles:
  paths:
  - tests/fixtures/pmtiles
geojson:
  paths:
  - tests/fixtures/pmtiles
sprites:
  paths:
  - tests/fixtures/sprites/src1
styles:
  paths:
  - tests/fixtures/styles/maplibre_demo.json
  - tests/fixtures/styles/src2
fonts:
  paths:
  - tests/fixtures/fonts/overpass-mono-regular.ttf
  - tests/fixtures/fonts
