e2e-tests/tests/snapshots/save_config__every_documented_setting_survives_the_round_trip.snap
---
source: e2e-tests/tests/save_config.rs
expression: saved
---
cache:
  size_mb: 8
  minzoom: 0
  maxzoom: 20
keep_alive: 75
shutdown_timeout: 10
listen_addresses: 127.0.0.1:0
worker_processes: 1
cache_control: public, max-age=3600
cors:
  origin:
  - "*"
  max_age: null
observability:
  metrics: {}
tilejson_url_version_param: version
pmtiles:
  sources:
    pmt:
      path: tests/fixtures/pmtiles/stamen_toner__raster_CC-BY+ODbL_z3.pmtiles
      cache:
        minzoom: 0
        maxzoom: 3
      cache_control: no-store
  recursive: true
sprites:
  paths:
  - tests/fixtures/sprites/src1
  sources:
    mysrc: tests/fixtures/sprites/src2
styles:
  paths:
  - tests/fixtures/styles/src2
  sources:
    maplibre: tests/fixtures/styles/maplibre_demo.json
fonts:
  paths:
  - tests/fixtures/fonts/overpass-mono-regular.ttf
  - tests/fixtures/fonts
